# stencil_hls

./: .gitignore  CMakeLists.txt  README.md
analysis/: _parse_arguments.py  benchmarks.sqlite  db.py  opt.sqlite  opt_db.py  optimize.py  plot.py  plot_scaling.py  save_to_db.py  scaling.py  utilization.py
analysis/boards/: ADM-PCIE-7V3.board  ADM-PCIE-8K5.board  NV-K20.board  TUL-KU115.board  VU13P.board  VU37P.board  VU9P.board  ZC706.board
analysis/costs/: KintexUltrascaleDatasheet.costs  Virtex7Datasheet.costs  Virtex7Experimental.costs
analysis/ops/: 0Add1Mult.ops  1Add2Mult.ops  1Add3Mult.ops  1Add4Mult.ops  2Add1Mult.ops  4Add1Mult.ops  AddFloat.ops  AddMultDouble.ops  AddMultExpFloat.ops  AddMultFloat.ops  AddMultHalf.ops  Gemm_Float.ops  Jacobi2D.ops  Jacobi2D_DSP.ops  Jacobi2D_Double.ops  Jacobi2D_Half.ops
cmake/: FindSDAccel.cmake
hlslib/: DataPack.h  OpenCL.h
host/: ExecuteKernel.cpp
include/: Compute.h  Kernel.h  Memory.h  Reference.h  Stencil.h.in
include/hlslib/: DataPack.h  SDAccel.h  Stream.h  Utility.h
kernel/: Memory.cpp  Stencil.cpp
scripts/: O_opt_design_pre.tcl.in  Synthesis.tcl.in  scan_configurations.py
src/: ExecuteKernel.cpp  Kernel.cpp  Memory.cpp  Reference.cpp  Stats.cpp  Stencil.cpp  Testbench.cpp
test/: Testbench.cpp
